--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 $primary-color: #F5F6F7;
-$contrast-color: #d8d8d8;
+$contrast-color: #e2e2e2;
 $secondary-color: #292929;
 
 body {
@@ -127,12 +127,7 @@ svg {
   font-weight: normal;
   justify-content: center;
   text-align: center;
-}
-
-.panel_wrapper {
-  //max-width: 1000px;
-  //display: block;
-  //border: 1px dotted red;
+  flex-direction: row;
 }
 
 @media screen and (max-width: 690px) {
@@ -145,9 +140,7 @@ svg {
   background-color: $primary-color;
   color: $secondary-color;
   flex-grow: 1;
-
   text-align: left;
-  max-width: 450px;
   padding: 20px 20px 50px 20px;
   margin: 15px;
   text-decoration: none;
