--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d8d8d8;
+  background-color: #e2e2e2;
   color: #292929;
   margin: 0; }
 
@@ -93,7 +93,8 @@ svg {
   font-size: 18px;
   font-weight: normal;
   justify-content: center;
-  text-align: center; }
+  text-align: center;
+  flex-direction: row; }
 
 @media screen and (max-width: 690px) {
   .container {
@@ -104,15 +105,14 @@ svg {
   color: #292929;
   flex-grow: 1;
   text-align: left;
-  max-width: 450px;
   padding: 20px 20px 50px 20px;
   margin: 15px;
   text-decoration: none;
   border: 4px solid #F5F6F7;
   position: relative; }
   .panel.gjennomsiktig {
-    background-color: #d8d8d8;
-    border: 4px solid #d8d8d8; }
+    background-color: #e2e2e2;
+    border: 4px solid #e2e2e2; }
   .panel .panel_icon {
     width: 70px; }
 
