Fix font og boksstørrelse

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,8 @@ svg {
     font-size: 1em; }
 
 .topp_overskrift {
-  font-family: "Lora";
+  font-family: "Lora", serif;
+  font-weight: bold;
   font-style: italic;
   font-size: 2rem; }
 
@@ -90,11 +91,7 @@ svg {
 
 .container {
   display: flex;
-  font-size: 18px;
-  font-weight: normal;
-  justify-content: center;
-  text-align: center;
-  flex-direction: row; }
+  font-size: 18px; }
 
 @media screen and (max-width: 690px) {
   .container {
@@ -104,8 +101,9 @@ svg {
   background-color: #F5F6F7;
   color: #292929;
   flex-grow: 1;
+  flex-basis: 0;
   text-align: left;
-  padding: 20px 20px 50px 20px;
+  padding: 20px;
   margin: 15px;
   text-decoration: none;
   border: 4px solid #F5F6F7;
@@ -114,7 +112,10 @@ svg {
     background-color: #e2e2e2;
     border: 4px solid #e2e2e2; }
   .panel .panel_icon {
-    width: 70px; }
+    width: 70px;
+    height: 70px; }
+  .panel__consultant {
+    padding-bottom: 50px; }
 
 .sentrert {
   text-align: center; }
