--- a/src/App.scss
+++ b/src/App.scss
@@ -101,7 +101,8 @@ svg {
 }
 
 .topp_overskrift {
-  font-family: "Lora";
+  font-family: "Lora", serif;
+  font-weight: bold;
   font-style: italic;
   font-size: 2rem;
 }
@@ -121,14 +122,12 @@ svg {
   font-weight: 100;
 }
 
+
 .container {
   display: flex;
   font-size: 18px;
-  font-weight: normal;
-  justify-content: center;
-  text-align: center;
-  flex-direction: row;
 }
+
 
 @media screen and (max-width: 690px) {
   .container {
@@ -140,8 +139,9 @@ svg {
   background-color: $primary-color;
   color: $secondary-color;
   flex-grow: 1;
+  flex-basis: 0;
   text-align: left;
-  padding: 20px 20px 50px 20px;
+  padding: 20px;
   margin: 15px;
   text-decoration: none;
   border: 4px solid $primary-color;
@@ -154,6 +154,11 @@ svg {
 
   .panel_icon {
     width: 70px;
+    height: 70px;
+  }
+
+  &__consultant {
+    padding-bottom: 50px;
   }
 }
 
