--- a/src/App.scss
+++ b/src/App.scss
@@ -100,6 +100,11 @@ svg {
 
 }
 
+.content__column {
+  display: inline-block;
+  max-width: 1000px;
+}
+
 .topp_overskrift {
   font-family: "Lora", serif;
   font-weight: bold;
